# IJ

./: .gitignore  README.md
.github/workflows/: rust.yml
ijzer/: Cargo.toml
ijzer/examples/: arrays_example.rs  compiler_example.rs  example.rs  parser_example.rs  tensor_example.rs  tokenstream_example.rs
ijzer/src/: arrays.rs  ast_node.rs  compiler.rs  lexer.rs  lib.rs  node.rs  operations.rs  parser.rs  pretty_print.rs  syntax_error.rs  tensor.rs  tokens.rs  types.rs
ijzer/src/parser/: apply.rs  array.rs  as_function.rs  assign.rs  binary_op.rs  diag.rs  function_composition.rs  generalized_contraction.rs  identity.rs  index.rs  lambda_variable.rs  minus.rs  mod.rs  number.rs  parenthesis.rs  parser_functions.rs  reduction.rs  shape.rs  solve.rs  square_brackets.rs  svd.rs  symbol.rs  tensor_builder.rs  test_utils.rs  transpose.rs  type_conversion.rs  utils.rs
ijzer/src/tests/: basic.rs  binary.rs  mod.rs  unary.rs
ijzer/tests/: test_macro.rs
ijzer_examples/: Cargo.toml
ijzer_examples/examples/: example.rs
ijzer_lib/: Cargo.toml
ijzer_lib/src/: ast_node.rs  comparison_funcs.rs  compiler.rs  function_enums.rs  lib.rs  num_funcs.rs  operations.rs  syntax_error.rs  tensor.rs  tokens.rs  types.rs
ijzer_lib/src/parser/: apply.rs  array.rs  as_function.rs  assign.rs  binary_op.rs  diag.rs  function_composition.rs  generalized_contraction.rs  identity.rs  index.rs  lambda_variable.rs  minus.rs  mod.rs  number.rs  parenthesis.rs  parser_functions.rs  qr.rs  range.rs  reduction.rs  reshape.rs  shape.rs  solve.rs  svd.rs  symbol.rs  tensor_builder.rs  test_utils.rs  transpose.rs  type_conversion.rs  unary_function.rs  utils.rs
ijzer_macro/: Cargo.toml
ijzer_macro/src/: lib.rs
ijzer_macro/tests/: test_macro.rs
tokenizer/: Cargo.toml
tokenizer/src/: main.rs
