[package]
name = "ijzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[example]]
name = "example"

[[example]]
name = "arrays_example"

[[example]]
name = "compiler_example"

[[example]]
name = "tokenstream_example"

[[example]]
name = "tensor_example"

[dependencies]
anyhow = "1.0.79"
itertools = "0.12.1"
logos = "0.14.0"
ndarray = "0.15.6"
num-traits = "0.2.18"
proc-macro2 = "1.0.78"
quote = "1.0.35"
rand = "0.8.5"
rand_distr = "0.4.3"
syn = "2.0.51"
thiserror = "1.0.56"
