[package]
name = "ijzer_macro"
version = "0.1.0"
edition = "2021"
authors = ["Rik Voorhaar <rik.voorhaar@gmail.com>"]
description = "Macro for using IJzer in a rust project."
repository = "https://github.com/RikVoorhaar/IJ"
license = "MIT"

[dependencies]
ijzer_lib = { path = "../ijzer_lib", version = "0.1.0" }
proc-macro2 = "1.0.78"
quote = "1.0.35"
regex = "1.10.3"
syn = {version="2.0.52", features = ["full"]}
anyhow = "1.0.86"
approx = "0.5.1"

[lib]
proc-macro = true

